# ocrpostcorrection-notebooks

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  error-detection-train-log.csv  params.yaml  pyproject.toml
colab/: icdar-task1-hf-evaluation.ipynb  icdar-task1-hf-train.ipynb  icdar-task2-seq2seq-evaluation.ipynb  icdar-task2-train-seq2seq.ipynb  run-dvc.ipynb  train-byt5.ipynb  train-mt5.ipynb
data/: raw.dvc
data/interim/: .gitignore
data/processed/: .gitignore
local/: check_offsets_input_tokens.ipynb  evalTool_ICDAR2017.py  icdar-create-hf-dataset.ipynb  icdar-task2-create-dataset.ipynb  icdar-task2-results-analysis.ipynb  perfect_task1+2_output_analysis.ipynb
local/data/: results_task1+2_perfect_improved_evalTool.csv  results_task1+2_perfect_original_evalTool.csv
models/: .gitignore
models/error-correction/: .gitignore
reports/correction/: experiment_results.md  metrics.json
reports/detection/: .gitignore  experiment_results.md  metrics.json
results/correction/: .gitignore
results/detection/: .gitignore
results/perfect/: .gitignore
src/common/: common.py  option_types.py
src/stages/: calculate-loss-error-correction.py  convert-error-correction-predictions-to-icdar-format.py  convert-error-detection-predictions-to-icdar-output.py  convert-predictions-to-icdar-output.py  create-bert-vectors.py  create-error-correction-dataset.py  create-error-detection-dataset.py  create-intermediate-data.py  data-split.py  evaluate-error-detection.py  (+8 more)
templates/: report-error-correction.md  report-error-detection.md
(+5 files in other folders)
