[tool.poetry]
name = "ocrpostcorrection-notebooks"
version = "0.1.0"
description = ""
authors = ["Janneke van der Zwaan <jannekevdzwaan@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8.1"
datasets = "2.10.0"
transformers = "4.26.1"
pandas = "1.5.3"
ocrpostcorrection = {git = "https://github.com/jvdzwaan/ocrpostcorrection.git"}
dvc-gdrive = "2.19.1"
dvc = "^2.46.0"
scikit-learn = "^1.2.1"
nbdev = "^2.3.12"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
types-pyyaml = "^6.0.12.8"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
